log
Fri 23 Sep 2022 07:47:28 PM UTC: 
 tests:  1|8
total_score: 0/70
80f43b2
Fri 23 Sep 2022 08:42:37 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
4616efc
Fri 23 Sep 2022 08:43:26 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   44 |     return tree;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
28925fa
Fri 23 Sep 2022 08:47:23 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|8
total_score: 0/70
4e68159
Fri 23 Sep 2022 08:49:27 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|8
total_score: 0/70
22d7fc4
Fri 23 Sep 2022 08:50:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
95499ac
Fri 23 Sep 2022 09:15:30 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   78 |       if (is_equal(tree,key,aux->pair->key)==1)
      |       ^~
treemap.c:80:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   80 |         tree->current=aux->pair->data;
      |         ^~~~
treemap.c:80:32: error: ‘Pair’ has no member named ‘data’
   80 |         tree->current=aux->pair->data;
      |                                ^~
cc1: all warnings being treated as errors
Compilation failed
6f10bb3
Fri 23 Sep 2022 09:15:43 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:32: error: ‘Pair’ has no member named ‘data’
   80 |         tree->current=aux->pair->data;
      |                                ^~
Compilation failed
5ffafb2
